# casting

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  test.py
.contextr/: .ignore  state.json
.github/workflows/: pr.yml  release-app.yml  release-lib.yml
apps/cast-explorer/: pyproject.toml
apps/cast-explorer/src/casting/apps/cast_explorer/: __init__.py  cli.py
apps/cast/discord/: README.md  env.example  pyproject.toml
apps/cast/discord/src/casting/apps/cast/discord/: __init__.py  bot.py  run_bot.py
apps/cast/discord/src/casting/apps/cast/discord/commands/: git_commands.py  markdown_commands.py
apps/cast/discord/src/casting/apps/cast/discord/utils/: api_client.py  helpers.py
apps/cast/discord/tests/: test.py
apps/cast/server/: pyproject.toml
apps/cast/server/src/casting/apps/cast/server/: __init__.py  git_ops.py  main.py  markdown.py  models.py
apps/casting-query-bot/: Dockerfile  (+1 more)
apps/discord-bot/: .env.example  Dockerfile  pyproject.toml
apps/discord-bot/src/casting/apps/discord_bot/: __main__.py  engine_bridge.py  test.py  tool_chat_engine.py
apps/identity/identity-server/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject copy.toml  pyproject.toml
apps/identity/identity-server/alembic/: README  env.py  script.py.mako
apps/identity/identity-server/alembic/versions/: 0001_init.py
apps/identity/identity-server/src/identity-server/: db.py  main.py  models.py  schemas.py
apps/identity/identity-server/src/identity-server/api/: deps.py
apps/identity/identity-server/src/identity-server/api/routers/: identities.py  meetings.py  members.py  projects.py  resolve.py
apps/identity/identity-server/src/identity-server/core/: config.py
apps/identity/identity-server/src/identity-server/crud/: identities.py  meetings.py  members.py  projects.py
apps/identity/identity-server/src/identity-server/scripts/: seed.py
apps/identity/identity-server/src/identity-server/services/: resolver.py
apps/identity/identity-server/src/identity_server/: cli.py  db.py  main.py  models.py  schemas.py
apps/identity/identity-server/src/identity_server/api/: deps.py
apps/identity/identity-server/src/identity_server/api/routers/: identities.py  resolve.py
apps/identity/identity-server/src/identity_server/core/: config.py  enums.py
apps/identity/identity-server/src/identity_server/crud/: identities.py
apps/identity/identity-server/src/identity_server/scripts/: seed.py
apps/identity/identity-server/src/identity_server/services/: resolver.py
apps/identity/identity-server/tests/: conftest.py  test_identities_and_resolve.py  test_meetings.py  test_members.py  test_projects.py
apps/prompt-gen/: pyproject.toml
apps/prompt-gen/src/casting/apps/prompt_gen/: __init__.py  cli.py
docs/: discord-framework-overhaul.md  environment-setup.md  llmgine.md  uv-workspace-guide.md
libs/cast/git/: pyproject.toml
libs/cast/git/src/casting/cast/git/: __init__.py
libs/core/: pyproject.toml
libs/core/src/casting/core/: __init__.py
libs/discord/framework/: .env.example  pyproject.toml
libs/discord/framework/docs/: README.md
libs/discord/framework/src/casting/: __init__.py
libs/discord/framework/src/casting/discord/framework/: __init__.py  api.py  models.py  protocol.py  runtime.py  toolkit.py
libs/discord/framework/src/casting/discord/framework/discord_adapter/: __init__.py  bot_app.py  components.py  config.py  context.py  context_collector.py  session_manager.py
libs/discord/framework/src/casting/discord/framework/testing/: __init__.py  config.py  env_manager.py  harness.py
libs/discord/framework/tests/: conftest.py  test_api.py  test_env_manager.py  test_live_harness.py  test_runtime.py
libs/discord/processing/: pyproject.toml
libs/discord/processing/src/casting/discord/processing/: __init__.py
libs/gcal/: pyproject.toml
libs/gcal/src/casting/gcal/: __init__.py
libs/identity/: pyproject.toml
libs/identity/src/casting/identity/: __init__.py  operations.py  resolvers.py  schema.py  types.py  utils.py
libs/notion/: pyproject.toml
libs/notion/src/casting/notion/: __init__.py
libs/obsidian/: pyproject.toml
libs/obsidian/src/casting/obsidian/: __init__.py
orgs/casting/: pyproject.toml
orgs/casting-systems/: .dockerignore  .env.defaults  .gitignore  Dockerfile  Makefile  dagger.json  pyproject.toml
orgs/casting-systems/.dagger/: pyproject.toml
orgs/casting-systems/.dagger/src/monorepo_dagger/: main.py
orgs/casting-systems/apps/amber/: Dockerfile  README.md  pyproject.toml
orgs/casting-systems/apps/amber/src/casting_systems/apps/amber/: __init__.py  __main__.py
orgs/casting-systems/apps/test-app/: pyproject.toml
orgs/casting-systems/apps/test-app/src/test_app/: __init__.py
orgs/casting-systems/apps/test-bot/: pyproject.toml
orgs/casting-systems/apps/test-bot/src/test_bot/: __init__.py
orgs/casting-systems/env/dev/: base.env  casting-systems.env
orgs/casting-systems/env/prod/: base.env  casting-systems.env
orgs/casting-systems/env/staging/: base.env  casting-systems.env
orgs/casting-systems/env/test/: base.env  casting-systems.env
orgs/casting-systems/libs/org-rules/: pyproject.toml
orgs/casting-systems/libs/org-rules/src/casting_org/libs/org_rules/: __init__.py
orgs/casting-systems/migrations/agent_hub/: alembic.ini  env.py
orgs/casting-systems/migrations/agent_hub/versions/: 20241006_0001_initial_agents.py
orgs/casting-systems/ops/: docker-compose.yml
orgs/casting-systems/ops/chart/agent-hub/: Chart.yaml  values.yaml
orgs/casting-systems/ops/chart/agent-hub/templates/: _helpers.tpl  deployment.yaml  service.yaml
orgs/casting-systems/ops/values/: dev.yaml  prod.yaml  staging.yaml
orgs/casting-systems/sql/: dbt_project.yml  profiles.yml
orgs/casting-systems/sql/models/agents/: agent_activity.sql  agent_metrics.sql  schema.yml
orgs/casting-systems/src/casting_org/: __init__.py  app.py  cli.py
orgs/casting/src/casting_org/: __init__.py  cli.py
tests/: test_cli_e2e.py  test_digest.py  test_rename.py  test_rename_simple.py  test_sync.py
(+118 files in other folders)
