[project]
name = "casting-monorepo"
version = "0.0.1"
description = "Workspace root for Casting monorepo"
dependencies = [
]

[tool.uv.workspace]
members = [
    "llmgine",
    "apps/casting-query-bot",
    "libs/cast/query",
    "libs/discord/framework",
    "libs/platform/config",
    "apps/cast/cli",
    "apps/cast/tui",
    "libs/cast/core",
    "libs/cast/sync"
]
exclude = [
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["apps", "libs", "tests", "orgs", "docs"]

[tool.ruff.lint]
select = [
    "A",
    "E",
    "F",
    "I",
    "N",
    "T100",
]

[tool.ruff.lint.isort]
known-first-party = ["casting", "casting_org"]

[tool.pyright]
include = [
    "apps",
    "libs",
    "llmgine"
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "orgs"
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "--doctest-modules"
markers = [
    "live: requires external Discord environment",
]

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"

# Test commands - run from root
"test:cli" = "pytest apps/cast/cli/tests"
"test:tui" = { shell = "cd apps/cast/tui && pytest $@" }
"test:core" = { shell = "cd libs/cast/core && pytest $@" }
"test:sync" = { shell = "cd libs/cast/sync && pytest $@" }
"test:all" = [
    { ref = "test:cli" },
    { ref = "test:tui" },
    { ref = "test:core" },
    { ref = "test:sync" }
]
test = { ref = "test:all" }

all = [
    { ref = "fmt" },
    { ref = "lint" },
    { ref = "check" },
    { ref = "test" },
]

# CI commands
"ci:fmt" = "ruff format --check"
"ci:lint" = "ruff check"
"ci:check" = "pyright"
"ci:test" = { ref = "test:all" }
"ci:all" = [
    { ref = "ci:fmt" },
    { ref = "ci:lint" },
    { ref = "ci:check" },
    { ref = "ci:test" },
]