[project]
name = "casting-monorepo"
version = "0.0.1"
description = "Workspace root for Casting monorepo"

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "dagger-io>=0.19.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
    "twine>=6.2.0",
]

[tool.uv.workspace]
members = [
    "llmgine",
    "apps/casting-query-bot",
    "libs/cast/query",
    "libs/discord/framework",
    "libs/platform/config",
    "apps/cast/cli",
    "apps/cast/tui",
    "libs/cast/core",
    "libs/cast/sync"
]
exclude = [
]

[tool.uv.sources]
llmgine = { path = "./llmgine", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["apps", "libs", "tests", "orgs", "docs"]

[tool.ruff.lint]
select = [
    "A",
    "E",
    "F",
    "I",
    "N",
    "T100",
]

[tool.pyright]
include = [
    "apps",
    "libs",
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "orgs",
    "llmgine"
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false
