[project]
name = "cast-explorer"
version = "0.1.0"
description = "CLI/TUI for exploring casts"
requires-python = ">=3.12"
dependencies = [
  "rich>=13",
  "typer>=0.12",
  "textual>=0.41.0",
  "casting-core",
  "casting-discord-framework",
  "casting-discord-processing",
]

[project.scripts]
cast-explorer = "casting.apps.cast_explorer.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.apps.cast_explorer"
namespace = true