[project]
name = "prompt-gen"
version = "0.1.0"
description = "AI prompt generation and management for casting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=13",
  "typer>=0.12",
  "jinja2>=3.1.0",
  "pyyaml>=6.0",
  "casting-core",
]

[project.scripts]
prompt-gen = "casting.apps.prompt_gen.cli:app"

[build-system]
requires = ["uv>=0.5.0"]
build-backend = "uv"

[tool.uv.build-backend]
module-name = "casting.apps.prompt_gen"
namespace = true