[project]
name = "prompt-gen"
version = "0.1.0"
description = "AI prompt generation and management for casting systems"
requires-python = ">=3.12"
dependencies = [
  "rich>=13",
  "typer>=0.12",
  "jinja2>=3.1.0",
  "pyyaml>=6.0",
  "casting-core",
]

[project.scripts]
prompt-gen = "casting.apps.prompt_gen.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.apps.prompt_gen"
namespace = true