[project]
name = "casting-core"
version = "0.1.0"
description = "Core domain: Cast, pipelines, plugin interfaces"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "anyio>=4",
  "typing-extensions>=4.12"
]

[project.entry-points."casting.plugins"]
core = "casting.core:Plugin"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.core"
namespace = true