[project]
name = "casting-identity"
version = "0.1.0"
description = "Identity library for Casting Systems (maps external identities to catalog.members)"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.identity"
namespace = true