[project]
name = "casting-notion"
version = "0.1.0"
description = "Notion integration for casting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "anyio>=4",
  "pydantic>=2.8",
  "casting-core",
]

[project.entry-points."casting.plugins"]
notion = "casting.notion:Plugin"

[build-system]
requires = ["uv>=0.5.0"]
build-backend = "uv"

[tool.uv.build-backend]
module-name = "casting.notion"
namespace = true