[project]
name = "casting-obsidian"
version = "0.1.0"
description = "Obsidian integration for casting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "anyio>=4",
  "pydantic>=2.8",
  "casting-core",
]

[project.entry-points."casting.plugins"]
obsidian = "casting.obsidian:Plugin"

[build-system]
requires = ["uv>=0.5.0"]
build-backend = "uv"

[tool.uv.build-backend]
module-name = "casting.obsidian"
namespace = true