[project]
name = "casting-org"
version = "0.1.0"
description = "Org-specific extensions for casting systems"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "typer>=0.12",
    "rich>=13",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23",
    "pytest-dotenv>=0.5"
]
migrate = [
    "alembic>=1.13",
    "psycopg[binary]>=3.1"
]
pipeline = [
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "sqlfluff>=3.0"
]

[project.scripts]
casting-org = "casting_org.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
