[project]
name = "casted-casting-systems"
version = "0.1.0"
description = "Org-specific extensions for Casting Systems"
requires-python = ">=3.13"

[dependency-groups]
dagger = [
    "monorepo-dagger",
]
dev = [
    "basedpyright>=1.31.6",
    "dagger-io>=0.19.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
    "tomli>=2.2.1",
    "twine>=6.2.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    ".dagger",
]

[tool.uv.sources]
monorepo-dagger = { workspace = true }

[project.scripts]
casting-org = "casting_org.cli:app"

[project.entry-points."dagger.mod"]
main_object = "monorepo_dagger:MonorepoDagger"