[project]
name = "identity-app"
version = "0.1.0"
description = "Cast Identity App"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.40",
    "pandas>=2.2.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "typer>=0.12.0",
    "casting-identity>=0.1.0",
]

[project.scripts]
cast-identity = "casting.apps.identity:main"


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.apps.identity"
namespace = true