[project]
name = "cast-git"
version = "0.1.0"
description = "Git wrapper utilities for Cast (future use)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0"
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.cast.git"
namespace = true