[project]
name = "casting-discord-framework"
version = "0.1.0"
description = "Low-level Discord integration (adapters, auth, event loop)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "anyio>=4",
  "pydantic>=2.8",
]

[project.optional-dependencies]
"discord.py" = ["discord.py>=2.4"]

[project.entry-points."casting.plugins"]
discord_framework = "casting.discord.framework:Plugin"

[build-system]
requires = ["uv>=0.5.0"]
build-backend = "uv"

[tool.uv.build-backend]
module-name = "casting.discord.framework"
namespace = true