[project]
name = "casting-discord-processing"
version = "0.1.0"
description = "Discord message processing, streaming, structured logging, retries"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "anyio>=4",
  "pydantic>=2.8",
  "structlog>=24.1.0",
  "tenacity>=8.0.0",
  "casting-core",
  "casting-discord-framework",
]

[project.entry-points."casting.plugins"]
discord_processing = "casting.discord.processing:Plugin"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting.discord.processing"
namespace = true