[project]
name = "amber-bot"
version = "0.1.0"
description = "Casting Systems org wrapper around the shared Discord bot"
requires-python = ">=3.13"
dependencies = [
    "discord-bot",
]

[tool.uv.sources]
discord-bot = { path = "../../../../apps/discord-bot", editable = true }

[project.scripts]
dev = "casting_systems.apps.amber:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting_org.apps.discord_bot"
namespace = true
