[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Luo", email = "nathanluo13@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-app = "test_app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
