[project]
name = "test-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Luo", email = "nathanluo13@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "org-rules",
    "cast-core"
]

[tool.uv.sources]
org-rules = { workspace = true }
cast-core = { path = "../../../../libs/cast/core", editable = true }

[project.scripts]
test-bot = "test_bot:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
