[project]
name = "casting-org-rules"
version = "0.1.0"
description = "Organization-specific governance rules"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "casting_org.libs.org_rules"
namespace = true
